log
Wed Apr  6 18:57:35 UTC 2022: 
 tests:  0|6
total_score: 0/70
d33f211
Wed Apr  6 19:03:21 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:43: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   HashMap * m = (HashMap*) malloc (sizeof(Hashmap));
                                           ^~~~~~~
                                           HashMap
hashmap.c:55:43: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->size = NULL;
           ^
hashmap.c:57:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->capacity = NULL;
               ^
hashmap.c:58:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->current = NULL;
              ^
cc1: all warnings being treated as errors
Compilation failed
0fac536
